# capstone-project-3900h16bsyphon

./: .gitignore  README.md  README.txt  backend.md  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  package-lock.json  package.json  run_app.sh  run_docker.sh  update-migrations.sh
.github/workflows/: ci.yml
backend/: .dockerignore  .env  .env.dev  Cargo.toml  Dockerfile  dev.Dockerfile  prod.Dockerfile  run_backend.sh  run_prod.sh  todo.md
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230618_062036_auth_data.rs  m20230625_103838_create_all_tables.rs  m20230705_080834_tag_deduplication.rs  m20230802_041755_create_notifs.rs
backend/src/: database_utils.rs  entrypoint.sh  main.rs  prelude.rs
backend/src/entities/: clusters.rs  course_admins.rs  course_offerings.rs  faqs.rs  logs.rs  messages.rs  mod.rs  notification.rs  post.rs  prelude.rs  queue_tags.rs  queue_tutors.rs  queues.rs  request_images.rs  request_status_log.rs  request_tags.rs  requests.rs  sea_orm_active_enums.rs  tags.rs  tutors.rs  user_data.rs  users.rs
backend/src/models/: auth.rs  course.rs  faq.rs  faqs.rs  history.rs  logs.rs  mod.rs  queue.rs  request.rs  user.rs
backend/src/server/: auth.rs  cluster.rs  course.rs  faqs.rs  history.rs  logs.rs  mod.rs  notifications.rs  queue.rs  queue_creation.rs  request.rs  sockets.rs  user.rs
backend/src/sockets/: invalidation.rs  lobby.rs  messages.rs  mod.rs  websockets.rs
backend/src/utils/: auth.rs  course.rs  db.rs  mod.rs  notifs.rs  queue.rs  request.rs  user.rs
backend/src/utils/sockets/: lobby.rs  messages.rs  mod.rs  websockets.rs
frontend/: .env  .eslintrc.json  .stylelintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  prod.Dockerfile  utils.ts  websocketClient.ts
frontend/hooks/: useAuthenticatedWebSocket.ts
frontend/pages/: Error.module.css  Home.module.css  _app.tsx  (+4 more)
work_diaries/: z5286353.txt  z5309306.txt  z5311768.txt  z5312299.txt  z5361515.txt
(+171 files in other folders)
