[package]
name = "actix-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
sea-orm = { version = "^0.9.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
futures = "0.3.28"
env_logger = "0.10.0"
log = "0.4.19"
dotenv = "0.15.0"
chrono = "0.4.26"
