[package]
name = "actix-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
sea-orm = { version = "^0.9.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
futures = "0.3.28"
env_logger = "0.10.0"
log = "0.4.19"
dotenv = "0.15.0"
chrono = "0.4.26"
actix-web-httpauth = "0.8.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.7"
dotenv_codegen = "0.15.0"
# argon2 = { version =  "0.5.0", features = ["password-hash"] }
base64 = "0.21.2"
rust-argon2 = "1.0.0"
