[package]
name = "actix-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
sea-orm = { version = "^0.11.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
futures = "0.3.28"
env_logger = "0.10.0"
log = "0.4.19"
dotenv = "0.15.0"
actix-web-httpauth = "0.8.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.7"
dotenv_codegen = "0.15.0"
base64 = "0.21.2"
rust-argon2 = "1.0.0"
actix-cors = "0.6.4"
serde_json = "1.0.99"
chrono = "0.4.26"
regex = "1.8.4"
lazy_static = "1.4.0"
async-std = "1.12.0"
